--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -1,10 +1,15 @@
 {
   "manifest_version": 3,
   "name": "Qin Salon Extension",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Qin Salonをより便利にするための拡張機能です",
   "action": {
-    "default_title": "Qin Salon Extension"
+    "default_title": "Qin Salon Extension",
+    "default_icon": {
+      "32": "icons/icon_32.png",
+      "64": "icons/icon_64.png",
+      "128": "icons/icon_128.png"
+    }
   },
   "background": {
     "service_worker": "background.js"
